[package]
name = "reaper_rust"
version = "0.1.0"
authors = ["Simon Waloschek <simon.waloschek@posteo.de>"]
edition = "2018"

[lib]
crate-type =["cdylib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
user32-sys = "0.2.0"
libc = "0.2.66"
lazy_static = "1.4.0"
strum = "0.16.0"
strum_macros = "0.16.0"